Added set_target_properties and rectified SRC variable

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@ project(ChunkedList)
 
 set(CMAKE_CXX_STANDARD 20)
 
-set(SRC src/ChunkedList.hpp src/ChunkedList.hpp)
+set(SRC src/ChunkedList.cpp)
 
 add_library(ChunkedList STATIC ${SRC})
+
+set_target_properties(ChunkedList PROPERTIES LINKER_LANGUAGE CXX)
