--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Run Tests
+name: CI
 
 on:
   push:
@@ -15,26 +15,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-
-      - name: Set up C++ (g++)
-        uses: actions/setup-cpp@v1
-        with:
-          compiler: g++-12
       
       - name: Install dependencies
-        run: sudo apt-get install -y cmake
+        run: sudo apt-get update && sudo apt-get install -y cmake g++
 
-      - name: Create build directory
-        run: mkdir -p build
-        
-      - name: Configure with CMake
+      - name: Configure CMake
         run: cmake -S . -B build
 
-      - name: Build with CMake
-        run: cmake --build debug --config Release
+      - name: Build project
+        run: cmake --build build
 
-      - name: Run tests with CTest
-        run: cd build && ctest --output-on-failure
-
-
-
+      - name: Run tests
+        run: ./build/ChunkedListTest
