--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,7 @@ jobs:
         run: sudo apt-get update && sudo apt-get install -y cmake g++
 
       - name: Configure CMake
-        run: cmake -S . -B build
+        run: cmake -S Test -B build
 
       - name: Build project
         run: cmake --build build
