--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -2,10 +2,10 @@ cmake_minimum_required(VERSION 3.10)
 
 project(ChunkedListTest VERSION 1.0)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
+
+include_directories(../include)
 
 add_executable(${PROJECT_NAME} ChunkedListTest.cpp
         ../src/ChunkedList.cpp)
-
-target_include_directories(${PROJECT_NAME} PRIVATE ../include)
