Add run build task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -30,10 +30,22 @@
         "problemMatcher": []
     },
     {
+        "label": "Run Build",
+        "type": "shell",
+        "command": "./build/build",
+        "args": [],
+        "group": {
+            "kind": "test",
+            "isDefault": true
+        },
+        "problemMatcher": []
+    },
+    {
       "label": "Pre-launch Tasks",
       "dependsOn": [
           "Generate Build files",
-          "CMake Build"
+          "CMake Build",
+          "Run Build"
       ],
       "dependsOrder": "sequence",
       "problemMatcher": []
