--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -5,7 +5,7 @@ project(ChunkedListTest VERSION 1.0)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-set(SRC_FILES ChunkedListTest.cpp ../include/ChunkedList.hpp)
+set(SRC_FILES ChunkedListTest.cpp)
 
 include_directories(../include)
 
