--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -5,7 +5,11 @@ project(ChunkedListTest VERSION 1.0)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-set(SRC_FILES ChunkedListTest.cpp)
+set(SRC_FILES ChunkedListTest.cpp
+        ../src/ChunkedList.tpp
+        ../src/ChunkedListIterator.tpp
+        ../src/ChunkedListChunk.tpp
+)
 
 include_directories(../include)
 
