--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,7 +7,7 @@
           "command": "cmake",
           "args": [
               "-S Test",
-              "-B build"
+              "-B Test/build/vscode"
           ],
           "group": {
               "kind": "build",
@@ -21,7 +21,7 @@
         "command": "cmake",
         "args": [
             "--build",
-            "build",
+            "build"
         ],
         "group": {
             "kind": "build",
@@ -32,7 +32,7 @@
     {
         "label": "Run Build",
         "type": "shell",
-        "command": "./build/build",
+        "command": "./Test/build/vscode/build",
         "args": [],
         "group": {
             "kind": "test",
