Add executables, SRC_FILES, TEST_FILES, update project name

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -1,17 +1,29 @@
 cmake_minimum_required(VERSION 3.10)
 
-project(ChunkedListTest VERSION 1.0)
+project(ChunkedListTests VERSION 1.0)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-set(SRC_FILES ChunkedListTest.cpp
+set(SRC_FILES
         ../src/ChunkedList.tpp
         ../src/ChunkedListIterator.tpp
         ../src/ChunkedListChunk.tpp
         ../src/ChunkedListUtility.tpp
 )
 
+set(TEST_FILES core/TestUtility.cpp)
+
 include_directories(../include)
 
-add_executable(${PROJECT_NAME} ${SRC_FILES})
+add_executable(ChunkedListTest
+        ${SRC_FILES}
+        ${TEST_FILES}
+        ChunkedListTest.cpp
+)
+
+add_executable(StandardChunkedListTest
+        ${SRC_FILES}
+        ${TEST_FILES}
+        StandardChunkedListTest.cpp
+)
