Remove ShouldCopy template parameter

--- a/Test/CMakeLists.txt
+++ b/Test/CMakeLists.txt
@@ -5,12 +5,7 @@ project(ChunkedListTests VERSION 1.0)
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-set(SRC_FILES
-        ../src/ChunkedList.tpp
-        ../src/ChunkedListIterator.tpp
-        ../src/ChunkedListChunk.tpp
-        ../src/ChunkedListUtility.tpp
-)
+set(SRC_FILES)
 
 include_directories(../include)
 
@@ -22,4 +17,9 @@ add_executable(ChunkedListTest
 add_executable(StandardChunkedListTest
         ${SRC_FILES}
         StandardChunkedListTest.cpp
+)
+
+add_executable(CopyTest
+        ${SRC_FILES}
+        CopyTests.cpp
 )
