--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,4 +26,6 @@ jobs:
         run: cmake --build build
 
       - name: Run tests
-        run: ./build/ChunkedListTest
+        run: |
+          ./build/ChunkedListTest
+          ./build/ChunkedListSnakeTest
